src/rust/cxx/tests/ffi/tests.h

struct AShared;
enum class AEnum : uint16_t;
struct ABShared;
enum class ABEnum : uint16_t;
struct R;
struct Shared;
struct SharedString;
struct SharedWithKjOwn;
struct SharedWithMultipleKjOwns;
struct SharedWithKjRc;
struct SharedWithMultipleKjRcs;
struct SharedWithKjArc;
struct SharedWithMultipleKjArcs;
enum class Enum : uint16_t;
enum COwnedEnum {
  CVAL1,
  CVAL2,
};
size_t c_return_primitive();
Shared c_return_shared();
rust::Box<R> c_return_box();
std::unique_ptr<C> c_return_unique_ptr();
std::shared_ptr<C> c_return_shared_ptr();
const size_t &c_return_ref(const Shared &shared);
const size_t &c_return_ns_ref(const ::A::AShared &shared);
const size_t &c_return_nested_ns_ref(const ::A::B::ABShared &shared);
size_t &c_return_mut(Shared &shared);
rust::Str c_return_str(const Shared &shared);
rust::Slice<const char> c_return_slice_char(const Shared &shared);
rust::Slice<uint8_t> c_return_mutsliceu8(rust::Slice<uint8_t> slice);
rust::String c_return_rust_string();
rust::String c_return_rust_string_lossy();
std::unique_ptr<std::string> c_return_unique_ptr_string();
std::unique_ptr<std::vector<uint8_t>> c_return_unique_ptr_vector_u8();
std::unique_ptr<std::vector<double>> c_return_unique_ptr_vector_f64();
std::unique_ptr<std::vector<std::string>> c_return_unique_ptr_vector_string();
std::unique_ptr<std::vector<Shared>> c_return_unique_ptr_vector_shared();
std::unique_ptr<std::vector<C>> c_return_unique_ptr_vector_opaque();
const std::vector<uint8_t> &c_return_ref_vector(const C &c);
std::vector<uint8_t> &c_return_mut_vector(C &c);
rust::Vec<uint8_t> c_return_rust_vec_u8();
const rust::Vec<uint8_t> &c_return_ref_rust_vec(const C &c);
rust::Vec<uint8_t> &c_return_mut_rust_vec(C &c);
rust::Vec<rust::String> c_return_rust_vec_string();
rust::Vec<bool> c_return_rust_vec_bool();
size_t c_return_identity(size_t n);
size_t c_return_sum(size_t n1, size_t n2);
Enum c_return_enum(uint16_t n);
::A::AEnum c_return_ns_enum(uint16_t n);
::A::B::ABEnum c_return_nested_ns_enum(uint16_t n);
const C *c_return_const_ptr(size_t n);
C *c_return_mut_ptr(size_t n);
kj::Own<C> c_return_kj_own(size_t n);
size_t c_sizeof_shared_with_kj_own();
size_t c_alignof_shared_with_kj_own();
size_t c_sizeof_shared_with_multiple_kj_owns();
size_t c_alignof_shared_with_multiple_kj_owns();
SharedWithKjOwn c_return_shared_with_kj_own(size_t n);
SharedWithMultipleKjOwns c_return_shared_with_multiple_kj_owns(size_t first, size_t second);
size_t c_take_shared_with_kj_own_by_value(SharedWithKjOwn shared);
size_t c_take_shared_with_kj_own_by_ref(const SharedWithKjOwn &shared);
size_t c_take_shared_with_multiple_kj_owns_by_value(SharedWithMultipleKjOwns shared);
size_t c_take_shared_with_multiple_kj_owns_by_ref(const SharedWithMultipleKjOwns &shared);
SharedWithKjOwn c_roundtrip_shared_with_kj_own(SharedWithKjOwn shared);
SharedWithMultipleKjOwns c_roundtrip_shared_with_multiple_kj_owns(SharedWithMultipleKjOwns shared);
kj::Rc<RcC> c_return_kj_rc(size_t n);
kj::Rc<NonRefcountedRcC> c_return_non_refcounted_kj_rc(size_t n);
size_t c_take_non_refcounted_kj_rc_by_ref(const kj::Rc<NonRefcountedRcC> &rc);
size_t c_sizeof_shared_with_kj_rc();
size_t c_alignof_shared_with_kj_rc();
size_t c_sizeof_shared_with_multiple_kj_rcs();
size_t c_alignof_shared_with_multiple_kj_rcs();
SharedWithKjRc c_return_shared_with_kj_rc(size_t n);
SharedWithMultipleKjRcs c_return_shared_with_multiple_kj_rcs(size_t first, size_t second);
size_t c_take_shared_with_kj_rc_by_value(SharedWithKjRc shared);
size_t c_take_shared_with_kj_rc_by_ref(const SharedWithKjRc &shared);
size_t c_take_shared_with_multiple_kj_rcs_by_value(SharedWithMultipleKjRcs shared);
size_t c_take_shared_with_multiple_kj_rcs_by_ref(const SharedWithMultipleKjRcs &shared);
SharedWithKjRc c_roundtrip_shared_with_kj_rc(SharedWithKjRc shared);
SharedWithMultipleKjRcs c_roundtrip_shared_with_multiple_kj_rcs(SharedWithMultipleKjRcs shared);
kj::Arc<ArcC> c_return_kj_arc(size_t n);
kj::Arc<NonAtomicArcC> c_return_non_atomic_kj_arc(size_t n);
size_t c_take_non_atomic_kj_arc_by_ref(const kj::Arc<NonAtomicArcC> &arc);
size_t c_sizeof_shared_with_kj_arc();
size_t c_alignof_shared_with_kj_arc();
size_t c_sizeof_shared_with_multiple_kj_arcs();
size_t c_alignof_shared_with_multiple_kj_arcs();
SharedWithKjArc c_return_shared_with_kj_arc(size_t n);
SharedWithMultipleKjArcs c_return_shared_with_multiple_kj_arcs(size_t first, size_t second);
size_t c_take_shared_with_kj_arc_by_value(SharedWithKjArc shared);
size_t c_take_shared_with_kj_arc_by_ref(const SharedWithKjArc &shared);
size_t c_take_shared_with_multiple_kj_arcs_by_value(SharedWithMultipleKjArcs shared);
size_t c_take_shared_with_multiple_kj_arcs_by_ref(const SharedWithMultipleKjArcs &shared);
SharedWithKjArc c_roundtrip_shared_with_kj_arc(SharedWithKjArc shared);
SharedWithMultipleKjArcs c_roundtrip_shared_with_multiple_kj_arcs(SharedWithMultipleKjArcs shared);
void c_take_primitive(size_t n);
void c_take_shared(Shared shared);
void c_take_ns_shared(::A::AShared shared);
void c_take_nested_ns_shared(::A::B::ABShared shared);
void c_take_box(rust::Box<R> r);
void c_take_ref_r(const R &r);
void c_take_ref_c(const C &c);
void c_take_str(rust::Str s);
void c_take_slice_char(rust::Slice<const char> s);
void c_take_slice_shared(rust::Slice<const Shared> s);
void c_take_slice_shared_sort(rust::Slice<Shared> s);
void c_take_slice_r(rust::Slice<const R> s);
void c_take_slice_r_sort(rust::Slice<R> s);
void c_take_rust_string(rust::String s);
void c_take_unique_ptr_string(std::unique_ptr<std::string> s);
void c_take_unique_ptr_vector_u8(std::unique_ptr<std::vector<uint8_t>> v);
void c_take_unique_ptr_vector_f64(std::unique_ptr<std::vector<double>> v);
void c_take_unique_ptr_vector_string(std::unique_ptr<std::vector<std::string>> v);
void c_take_unique_ptr_vector_shared(std::unique_ptr<std::vector<Shared>> v);
void c_take_ref_vector(const std::vector<uint8_t> &v);
void c_take_rust_vec(rust::Vec<uint8_t> v);
void c_take_rust_vec_index(rust::Vec<uint8_t> v);
void c_take_rust_vec_shared(rust::Vec<Shared> v);
void c_take_rust_vec_ns_shared(rust::Vec<::A::AShared> v);
void c_take_rust_vec_nested_ns_shared(rust::Vec<::A::B::ABShared> v);
void c_take_rust_vec_string(rust::Vec<rust::String> v);
void c_take_rust_vec_shared_index(rust::Vec<Shared> v);
void c_take_rust_vec_shared_push(rust::Vec<Shared> v);
void c_take_rust_vec_shared_truncate(rust::Vec<Shared> v);
void c_take_rust_vec_shared_clear(rust::Vec<Shared> v);
void c_take_rust_vec_shared_forward_iterator(rust::Vec<Shared> v);
void c_take_rust_vec_shared_sort(rust::Vec<Shared> v);
void c_take_ref_rust_vec(const rust::Vec<uint8_t> &v);
void c_take_ref_rust_vec_string(const rust::Vec<rust::String> &v);
void c_take_ref_rust_vec_index(const rust::Vec<uint8_t> &v);
void c_take_ref_rust_vec_copy(const rust::Vec<uint8_t> &v);
const SharedString &c_take_ref_shared_string(const SharedString &s);
void c_take_callback(rust::Fn<size_t(rust::String)> callback);
void c_take_callback_ref(rust::Fn<void(const rust::String &)> callback);
void c_take_callback_mut(rust::Fn<void(rust::String &)> callback);
void c_take_enum(Enum e);
void c_take_ns_enum(::A::AEnum e);
void c_take_nested_ns_enum(::A::B::ABEnum e);
size_t c_take_const_ptr(const C *c);
size_t c_take_mut_ptr(C *c);
void c_try_return_void();
size_t c_try_return_primitive();
size_t c_fail_return_primitive();
size_t c_fail_kj_exception_return_primitive();
size_t c_fail_kj_exception_disconnected_return_primitive();
size_t c_fail_kj_exception_with_details_return_primitive();
size_t c_cancel_return_primitive();
size_t c_cancel_via_rust_return_primitive();
size_t c_cancel_roundtrip_return_primitive();