src/rust/cxx/tests/ffi/lib.rs

#![allow(
    clippy::boxed_local,
    clippy::missing_errors_doc,
    clippy::missing_safety_doc,
    clippy::must_use_candidate,
    clippy::needless_lifetimes,
    clippy::needless_pass_by_value,
    clippy::unnecessary_literal_bound,
    clippy::unnecessary_wraps,
    clippy::unused_self
)]
#![allow(unknown_lints)]
#![warn(rust_2024_compatibility)]
#![forbid(unsafe_op_in_unsafe_fn)]
#![deny(warnings)] // Check that expansion of `cxx::bridge` doesn't trigger warnings.

pub mod cast;
pub mod module;

use core::fmt;
use std::fmt::Display;
use std::mem::MaybeUninit;
use std::os::raw::c_char;

use cxx::CxxString;
use cxx::CxxVector;
use cxx::ExternType;
use cxx::KjError;
use cxx::KjExceptionType;
use cxx::SharedPtr;
use cxx::UniquePtr;
use cxx::type_id;
// The bridge parser accepts the unqualified smart-pointer name, while expansion
// fully qualifies the emitted Rust field type.
use kj_rs::{KjArc, KjOwn, KjRc};

pub type ImportedKjArc = KjArc<()>;
pub type ImportedKjOwn = KjOwn<()>;
pub type ImportedKjRc = KjRc<()>;

#[cxx::bridge(namespace = "tests")]
pub mod ffi {
    #[derive(Clone, Debug, PartialEq, Eq, PartialOrd, Ord)]
    struct Shared {
        z: usize,
    }

    #[derive(PartialEq, Eq, PartialOrd)]
    struct SharedString {
        msg: String,
    }

    #[derive(JsgStruct)]
    struct CaaRecord {
        critical: u8,
        field: String,
        value: String,
    }

    struct SharedWithKjOwn {
        own: KjOwn<C>,
    }

    struct SharedWithMultipleKjOwns {
        first: KjOwn<C>,
        second: KjOwn<C>,
    }

    struct SharedWithKjRc {
        rc: KjRc<RcC>,
    }

    struct SharedWithMultipleKjRcs {
        first: KjRc<RcC>,
        second: KjRc<RcC>,
    }

    struct SharedWithKjArc {
        arc: KjArc<ArcC>,
    }

    struct SharedWithMultipleKjArcs {
        first: KjArc<ArcC>,
        second: KjArc<ArcC>,
    }

    #[derive(Debug, Hash, PartialOrd, Ord)]
    enum Enum {
        AVal,
        BVal = 2020,
        #[cxx_name = "CVal"]
        LastVal,
    }

    #[namespace = "A"]
    #[derive(Copy, Clone, Default)]
    struct AShared {
        #[cxx_name = "type"]
        z: usize,
    }

    #[namespace = "A"]
    enum AEnum {
        AAVal,
        ABVal = 2020,
        ACVal,
    }

    #[namespace = "A::B"]
    enum ABEnum {
        ABAVal,
        ABBVal = 2020,
        ABCVal,
    }

    #[namespace = "A::B"]
    #[derive(Clone)]
    struct ABShared {
        z: usize,
    }

    #[namespace = "first"]
    struct First {
        second: Box<Second>,
    }

    #[namespace = "second"]
    #[derive(Hash)]
    struct Second {
        i: i32,
        e: COwnedEnum,
    }

    pub struct Array {
        a: [i32; 4],
        b: Buffer,
    }

    #[derive(Copy, Clone, Debug, Default, Eq, Hash, Ord, PartialEq, PartialOrd)]
    pub struct StructWithLifetime<'a> {
        s: &'a str,
    }

    unsafe extern "C++" {
        include!("tests/ffi/tests.h");

        type C;
        fn c_return_primitive() -> usize;
        fn c_return_shared() -> Shared;
        fn c_return_box() -> Box<R>;
        fn c_return_unique_ptr() -> UniquePtr<C>;
        fn c_return_shared_ptr() -> SharedPtr<C>;
        unsafe fn c_return_mut<'a>(shared: &'a mut Shared) -> &'a mut usize;
        unsafe fn c_return_str<'a>(shared: &'a Shared) -> &'a str;
        unsafe fn c_return_slice_char<'a>(shared: &'a Shared) -> &'a [c_char];
        unsafe fn c_return_mutsliceu8<'a>(slice: &'a mut [u8]) -> &'a mut [u8];
        unsafe fn c_return_ref<'a>(shared: &'a Shared) -> &'a usize;
        fn c_return_rust_string() -> String;
        fn c_return_rust_string_lossy() -> String;
        fn c_return_unique_ptr_string() -> UniquePtr<CxxString>;
        fn c_return_unique_ptr_vector_u8() -> UniquePtr<CxxVector<u8>>;
        fn c_return_unique_ptr_vector_f64() -> UniquePtr<CxxVector<f64>>;
        fn c_return_unique_ptr_vector_string() -> UniquePtr<CxxVector<CxxString>>;
        fn c_return_unique_ptr_vector_shared() -> UniquePtr<CxxVector<Shared>>;
        fn c_return_unique_ptr_vector_opaque() -> UniquePtr<CxxVector<C>>;
        unsafe fn c_return_ref_vector<'a>(c: &'a C) -> &'a CxxVector<u8>;
        unsafe fn c_return_mut_vector<'a>(c: Pin<&'a mut C>) -> Pin<&'a mut CxxVector<u8>>;
        fn c_return_rust_vec_u8() -> Vec<u8>;
        unsafe fn c_return_ref_rust_vec<'a>(c: &'a C) -> &'a Vec<u8>;
        unsafe fn c_return_mut_rust_vec<'a>(c: Pin<&'a mut C>) -> &'a mut Vec<u8>;
        fn c_return_rust_vec_string() -> Vec<String>;
        fn c_return_rust_vec_bool() -> Vec<bool>;
        fn c_return_identity(_: usize) -> usize;
        fn c_return_sum(_: usize, _: usize) -> usize;
        fn c_return_enum(n: u16) -> Enum;
        unsafe fn c_return_ns_ref<'a>(shared: &'a AShared) -> &'a usize;
        unsafe fn c_return_nested_ns_ref<'a>(shared: &'a ABShared) -> &'a usize;
        fn c_return_ns_enum(n: u16) -> AEnum;
        fn c_return_nested_ns_enum(n: u16) -> ABEnum;
        fn c_return_const_ptr(n: usize) -> *const C;
        fn c_return_mut_ptr(n: usize) -> *mut C;
        fn c_return_kj_own(n: usize) -> KjOwn<C>;
        fn c_sizeof_shared_with_kj_own() -> usize;
        fn c_alignof_shared_with_kj_own() -> usize;
        fn c_sizeof_shared_with_multiple_kj_owns() -> usize;
        fn c_alignof_shared_with_multiple_kj_owns() -> usize;
        fn c_return_shared_with_kj_own(n: usize) -> SharedWithKjOwn;
        fn c_return_shared_with_multiple_kj_owns(
            first: usize,
            second: usize,
        ) -> SharedWithMultipleKjOwns;
        fn c_take_shared_with_kj_own_by_value(shared: SharedWithKjOwn) -> usize;
        fn c_take_shared_with_kj_own_by_ref(shared: &SharedWithKjOwn) -> usize;
        fn c_take_shared_with_multiple_kj_owns_by_value(shared: SharedWithMultipleKjOwns) -> usize;
        fn c_take_shared_with_multiple_kj_owns_by_ref(shared: &SharedWithMultipleKjOwns) -> usize;
        fn c_roundtrip_shared_with_kj_own(shared: SharedWithKjOwn) -> SharedWithKjOwn;
        fn c_roundtrip_shared_with_multiple_kj_owns(
            shared: SharedWithMultipleKjOwns,
        ) -> SharedWithMultipleKjOwns;
        fn c_return_kj_rc(n: usize) -> KjRc<RcC>;
        fn c_return_non_refcounted_kj_rc(n: usize) -> KjRc<NonRefcountedRcC>;
        fn c_take_non_refcounted_kj_rc_by_ref(rc: &KjRc<NonRefcountedRcC>) -> usize;
        fn c_return_non_atomic_kj_arc(n: usize) -> KjArc<NonAtomicArcC>;
        fn c_take_non_atomic_kj_arc_by_ref(arc: &KjArc<NonAtomicArcC>) -> usize;
        fn c_sizeof_shared_with_kj_rc() -> usize;
        fn c_alignof_shared_with_kj_rc() -> usize;
        fn c_sizeof_shared_with_multiple_kj_rcs() -> usize;
        fn c_alignof_shared_with_multiple_kj_rcs() -> usize;
        fn c_return_shared_with_kj_rc(n: usize) -> SharedWithKjRc;
        fn c_return_shared_with_multiple_kj_rcs(
            first: usize,
            second: usize,
        ) -> SharedWithMultipleKjRcs;
        fn c_take_shared_with_kj_rc_by_value(shared: SharedWithKjRc) -> usize;
        fn c_take_shared_with_kj_rc_by_ref(shared: &SharedWithKjRc) -> usize;
        fn c_take_shared_with_multiple_kj_rcs_by_value(shared: SharedWithMultipleKjRcs) -> usize;
        fn c_take_shared_with_multiple_kj_rcs_by_ref(shared: &SharedWithMultipleKjRcs) -> usize;
        fn c_roundtrip_shared_with_kj_rc(shared: SharedWithKjRc) -> SharedWithKjRc;
        fn c_roundtrip_shared_with_multiple_kj_rcs(
            shared: SharedWithMultipleKjRcs,
        ) -> SharedWithMultipleKjRcs;
        fn c_return_kj_arc(n: usize) -> KjArc<ArcC>;
        fn c_sizeof_shared_with_kj_arc() -> usize;
        fn c_alignof_shared_with_kj_arc() -> usize;
        fn c_sizeof_shared_with_multiple_kj_arcs() -> usize;
        fn c_alignof_shared_with_multiple_kj_arcs() -> usize;
        fn c_return_shared_with_kj_arc(n: usize) -> SharedWithKjArc;
        fn c_return_shared_with_multiple_kj_arcs(
            first: usize,
            second: usize,
        ) -> SharedWithMultipleKjArcs;
        fn c_take_shared_with_kj_arc_by_value(shared: SharedWithKjArc) -> usize;
        fn c_take_shared_with_kj_arc_by_ref(shared: &SharedWithKjArc) -> usize;
        fn c_take_shared_with_multiple_kj_arcs_by_value(shared: SharedWithMultipleKjArcs) -> usize;
        fn c_take_shared_with_multiple_kj_arcs_by_ref(shared: &SharedWithMultipleKjArcs) -> usize;
        fn c_roundtrip_shared_with_kj_arc(shared: SharedWithKjArc) -> SharedWithKjArc;
        fn c_roundtrip_shared_with_multiple_kj_arcs(
            shared: SharedWithMultipleKjArcs,
        ) -> SharedWithMultipleKjArcs;

        fn c_take_primitive(n: usize);
        fn c_take_shared(shared: Shared);
        fn c_take_box(r: Box<R>);
        fn c_take_ref_r(r: &R);
        fn c_take_ref_c(c: &C);
        fn c_take_str(s: &str);
        fn c_take_slice_char(s: &[c_char]);
        fn c_take_slice_shared(s: &[Shared]);
        fn c_take_slice_shared_sort(s: &mut [Shared]);
        fn c_take_slice_r(s: &[R]);
        fn c_take_slice_r_sort(s: &mut [R]);
        fn c_take_rust_string(s: String);
        fn c_take_unique_ptr_string(s: UniquePtr<CxxString>);
        fn c_take_unique_ptr_vector_u8(v: UniquePtr<CxxVector<u8>>);
        fn c_take_unique_ptr_vector_f64(v: UniquePtr<CxxVector<f64>>);
        fn c_take_unique_ptr_vector_string(v: UniquePtr<CxxVector<CxxString>>);
        fn c_take_unique_ptr_vector_shared(v: UniquePtr<CxxVector<Shared>>);
        fn c_take_ref_vector(v: &CxxVector<u8>);
        fn c_take_rust_vec(v: Vec<u8>);
        fn c_take_rust_vec_shared(v: Vec<Shared>);
        fn c_take_rust_vec_string(v: Vec<String>);
        fn c_take_rust_vec_index(v: Vec<u8>);
        fn c_take_rust_vec_shared_index(v: Vec<Shared>);
        fn c_take_rust_vec_shared_push(v: Vec<Shared>);
        fn c_take_rust_vec_shared_truncate(v: Vec<Shared>);
        fn c_take_rust_vec_shared_clear(v: Vec<Shared>);
        fn c_take_rust_vec_shared_forward_iterator(v: Vec<Shared>);
        fn c_take_rust_vec_shared_sort(v: Vec<Shared>);
        fn c_take_ref_rust_vec(v: &Vec<u8>);
        fn c_take_ref_rust_vec_string(v: &Vec<String>);
        fn c_take_ref_rust_vec_index(v: &Vec<u8>);
        fn c_take_ref_rust_vec_copy(v: &Vec<u8>);
        unsafe fn c_take_ref_shared_string<'a>(s: &'a SharedString) -> &'a SharedString;
        fn c_take_callback(callback: fn(String) -> usize);
        fn c_take_callback_ref(callback: fn(&String));
        #[cxx_name = "c_take_callback_ref"]
        fn c_take_callback_ref_lifetime<'a>(callback: fn(&'a String));
        fn c_take_callback_mut(callback: fn(&mut String));
        fn c_take_enum(e: Enum);
        fn c_take_ns_enum(e: AEnum);
        fn c_take_nested_ns_enum(e: ABEnum);
        fn c_take_ns_shared(shared: AShared);
        fn c_take_nested_ns_shared(shared: ABShared);
        fn c_take_rust_vec_ns_shared(v: Vec<AShared>);
        fn c_take_rust_vec_nested_ns_shared(v: Vec<ABShared>);
        unsafe fn c_take_const_ptr(c: *const C) -> usize;
        unsafe fn c_take_mut_ptr(c: *mut C) -> usize;

        fn c_try_return_void() -> Result<()>;
        fn c_try_return_primitive() -> Result<usize>;
        fn c_fail_return_primitive() -> Result<usize>;
        fn c_fail_kj_exception_return_primitive() -> Result<usize>;
        fn c_fail_kj_exception_disconnected_return_primitive() -> Result<usize>;
        fn c_fail_kj_exception_with_details_return_primitive() -> Result<usize>;
        fn c_cancel_return_primitive() -> Result<usize>;
        fn c_cancel_via_rust_return_primitive() -> Result<usize>;
        fn c_cancel_roundtrip_return_primitive() -> Result<usize>;
